CRUD com Firebase
Uso do Módulo Database

--Criação dos componentes (product, product-list, products)

--Criação dos serviços (product)
    Model.ts com a estrutura do objeto product

Métodos de Insert, Delete e Update.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- AUTH -->
   <app-auth></app-auth>
 <!-- DATABASE -->
- <!-- <app-products></app-products> -->
+  <app-products></app-products>
 <!-- STORAGE -->
   <!-- <app-storage></app-storage> -->
 </div>
