Upload de Arquivos
--Módulo Storage

Novo component storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,5 @@
 <!-- DATABASE -->
   <app-products></app-products>
 <!-- STORAGE -->
-  <!-- <app-storage></app-storage> -->
+  <app-storage></app-storage>
 </div>
