--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -10,6 +10,7 @@
             <td>{{product.name}}</td>
             <td>{{product.category}}</td>
             <td>{{product.price}}</td>
+            <td>{{product.serie}}</td>
             <td>
               <a class="btn btn-warning text-white" (click)="onEdit(product)">
                   <i class="far fa-edit"></i>
