--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -43,6 +43,16 @@
             </div>
           </div>
           <div class="form-group">
+            <input 
+              type="text"
+              class="form-control"
+              name="serie"
+              #serie="ngModel"
+              [(ngModel)]="productService.selectedProduct.serie"
+              placeholder="Digite a série do produto"
+              >
+          </div>
+          <div class="form-group">
             <button class="btn btn-primary" type="submit">
                 <i class="fas fa-plus-circle"></i> Produto
             </button>
